--- a/styles/setup/_variables.scss
+++ b/styles/setup/_variables.scss
@@ -23,8 +23,12 @@ $gray: #6c7177;
 
 /* Font Family */
 $text-helper: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+$family-title-1: 'Gilroy-Heavy', sans-serif;
+$family-title-2: 'Gilroy', sans-serif;
+$family-text: 'Gilroy-Heavy', sans-serif;
 $family-main: Arial, $text-helper;
-$family-title: Verdana, $text-helper;
+/*$family-title: Verdana, $text-helper;*/
+
 
 /* Font Size */
 $text-tiny: 14px;
