--- a/styles/common/_buttons.scss
+++ b/styles/common/_buttons.scss
@@ -3,6 +3,6 @@
     border-radius: $border-radius;
     color: $white;
     display: inline-block;
-    font-family: $family-title;
+    font-family: $family-title-2;
     padding: 16px 42px;
 }
