--- a/styles/pages/home/benefits.scss
+++ b/styles/pages/home/benefits.scss
@@ -14,6 +14,7 @@
 .benefits__item {
     width: 533px;
     padding: 0 10px;
+    margin: 0 0 40px;
 }
 
 @media (min-width: 1140px) {
@@ -26,18 +27,17 @@
     }
 }
 
-
 .benefits__item-wr{
     display: flex;
+    height: 100%;
     min-height: 165px;
-    margin: 0 0 40px;
     background: #FFFFFF;
     border-radius: 8px;
 }
 
 .benefits__item-left {
     position: relative;
-    width: 114px;
+    width: 112px;
 }
 
 .benefits__item-img{
@@ -62,7 +62,7 @@
 .benefits__item-num {
     position: absolute;
     left: 0;
-    bottom: 0;
+    bottom: -1px;
     font-family: $family-title-1;
     font-size: 144px;
     line-height: 76%;
