--- a/styles/setup/_variables.scss
+++ b/styles/setup/_variables.scss
@@ -19,13 +19,14 @@ $blue: #2148D2;
 $light-blue: #0276FF;
 $gold: #F4CC7E;
 $gray-blue: #E2E8F1;
+$light-gray-blue: #F1F5FB;
 $gray: #6c7177;
 
 /* Font Family */
 $text-helper: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 $family-title-1: 'Gilroy-Heavy', sans-serif;
 $family-title-2: 'Gilroy', sans-serif;
-$family-text: 'Gilroy-Heavy', sans-serif;
+$family-text: 'Manrope', sans-serif;
 $family-main: Arial, $text-helper;
 /*$family-title: Verdana, $text-helper;*/
 
