--- a/styles/pages/home.css
+++ b/styles/pages/home.css
@@ -7,11 +7,22 @@
 /* Font Size */
 /* Borders */
 .first {
+  padding: 76px 0;
   background: #1B1E2C;
 }
 
 .first__title {
+  margin-bottom: 26px;
+  max-width: 725px;
   color: #F4CC7E;
+}
+
+.first__text {
+  margin-bottom: 79px;
+  max-width: 570px;
+  font-size: 28px;
+  line-height: 140%;
+  color: #fff;
 }
 
 .benefits {
@@ -30,6 +41,7 @@
 .benefits__item {
   width: 533px;
   padding: 0 10px;
+  margin: 0 0 40px;
 }
 
 @media (min-width: 1140px) {
@@ -43,15 +55,15 @@
 }
 .benefits__item-wr {
   display: flex;
+  height: 100%;
   min-height: 165px;
-  margin: 0 0 40px;
   background: #FFFFFF;
   border-radius: 8px;
 }
 
 .benefits__item-left {
   position: relative;
-  width: 114px;
+  width: 112px;
 }
 
 .benefits__item-img {
@@ -76,12 +88,92 @@
 .benefits__item-num {
   position: absolute;
   left: 0;
-  bottom: 0;
+  bottom: -1px;
   font-family: "Gilroy-Heavy", sans-serif;
   font-size: 144px;
   line-height: 76%;
   font-weight: 900;
   color: #E2E8F1;
+}
+
+.about {
+  padding: 102px 0;
+}
+
+.about__title {
+  color: #2148D2;
+}
+
+.title-line {
+  position: relative;
+}
+
+.title-line:after {
+  display: block;
+  content: "";
+  width: 114px;
+  height: 1px;
+  margin: 19px 0 0;
+  background: #F4CC7E;
+}
+
+.about__item {
+  display: flex;
+  justify-content: space-between;
+}
+
+.about__item + .about__item {
+  margin-top: 102px;
+}
+
+.about__item:last-child {
+  flex-direction: row-reverse;
+}
+
+.about__item:last-child .about__item-img {
+  margin-right: -16px;
+}
+
+.about__item-right {
+  width: 60%;
+  padding: 54px;
+  background: #F1F5FB;
+  border-radius: 8px;
+}
+
+.about__item-left {
+  width: 36%;
+  text-align: right;
+}
+
+.about__text {
+  margin-top: 32px;
+}
+
+.section-text {
+  line-height: 140%;
+}
+
+@media (min-width: 1600px) {
+  .about__item:last-child .about__item-img {
+    margin-right: -20px;
+  }
+
+  .title-2 {
+    font-size: 48px;
+  }
+
+  .section-text {
+    font-size: 24px;
+  }
+
+  .about__item-left {
+    width: 30%;
+  }
+
+  .about__item-right {
+    width: 68.7%;
+  }
 }
 
 /*# sourceMappingURL=home.css.map */
