--- a/styles/setup/_reset.scss
+++ b/styles/setup/_reset.scss
@@ -13,12 +13,11 @@ html {
     min-width: $html-min-width;
     max-width: $html-max-width;
     margin: 0 auto;
-
     color: $black;
     background-color: $white;
-
-    font-family: $family-main;
-    font-size: $text-medium;
+    font-family: $family-text;
+    font-size: $text-small;
+    font-weight: 400;
     line-height: 1.25;
     text-align: left;
     -webkit-text-size-adjust: 100%;
