feat: add layout FIRST block

--- a/styles/common/_containers.scss
+++ b/styles/common/_containers.scss
@@ -11,4 +11,8 @@
     @include desktop-large {
         width: $container-desktop-large-width;
     }
+
+    @include retina {
+        width: 156rem;
+    }
 }
