--- a/styles/common/_links.scss
+++ b/styles/common/_links.scss
@@ -1,5 +1,9 @@
 .link {
     cursor: pointer;
-    text-decoration: underline;
+    text-decoration: none;
     color: $blue;
+    -webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    transition: all 0.3s ease;
 }
