--- a/styles/common.css
+++ b/styles/common.css
@@ -33,10 +33,28 @@ html {
   text-align: left;
   -webkit-text-size-adjust: 100%;
 }
+@media (min-width: 1921px) {
+  html {
+    max-width: none;
+    font-size: 0.520836vw;
+  }
+}
 
+@media (min-width: 1921px) {
+  html {
+    max-width: none;
+    font-size: 0.520836vw;
+  }
+}
 body {
   height: 100%;
   margin: 0;
+}
+@media (min-width: 1921px) {
+  body {
+    max-width: none;
+    font-size: 24px;
+  }
 }
 
 p {
@@ -143,22 +161,59 @@ img {
     width: 1560px;
   }
 }
+@media (min-width: 1921px) {
+  .container {
+    width: 156rem;
+  }
+}
 
 .btn {
+  display: inline-block;
+  padding: 14px 40px;
+  font-family: "Gilroy", sans-serif;
+  font-size: 18px;
+  color: #fff;
   background: #0276FF;
   border-radius: 8px;
-  color: #fff;
-  display: inline-block;
-  font-family: "Gilroy", sans-serif;
-  padding: 16px 42px;
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+@media (min-width: 1921px) {
+  .btn {
+    padding: 2rem 5.6rem;
+    font-size: 2.2rem;
+  }
+}
+@media (min-width: 768px) {
+  .btn {
+    padding: 20px 56px;
+    font-size: 22px;
+  }
+}
+
+.btn:hover {
+  background: #102A83;
 }
 
 .title-1 {
   font-family: "Gilroy-Heavy", sans-serif;
-  font-size: 64px;
+  font-size: 48px;
+  line-height: 140%;
   font-weight: 900;
   letter-spacing: 0.04em;
   text-transform: uppercase;
+}
+@media (min-width: 768px) {
+  .title-1 {
+    font-size: 64px;
+  }
+}
+@media (min-width: 1921px) {
+  .title-1 {
+    font-size: 6.4rem;
+  }
 }
 
 .title-2 {
@@ -167,6 +222,16 @@ img {
   font-weight: 900;
   letter-spacing: 0.04em;
   text-transform: uppercase;
+}
+@media (min-width: 1600px) {
+  .title-2 {
+    font-size: 48px;
+  }
+}
+@media (min-width: 1921px) {
+  .title-2 {
+    font-size: 4.8rem;
+  }
 }
 
 .title-3 {
@@ -180,11 +245,30 @@ img {
   font-size: 24px;
   font-weight: 700;
 }
+@media (min-width: 1921px) {
+  .title-4 {
+    font-size: 2.4rem;
+  }
+}
 
+@media (min-width: 1600px) {
+  .section-text {
+    font-size: 24px;
+  }
+}
+@media (min-width: 1921px) {
+  .section-text {
+    font-size: 2.4rem;
+  }
+}
 .link {
   cursor: pointer;
-  text-decoration: underline;
+  text-decoration: none;
   color: #2148D2;
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease;
 }
 
 .arcticmodal-overlay,
