--- a/styles/common/_buttons.scss
+++ b/styles/common/_buttons.scss
@@ -1,8 +1,25 @@
 .btn {
+    display: inline-block;
+    padding: 14px 40px;
+    font-family: $family-title-2;
+    font-size: $text-small;
+    color: $white;
     background: $light-blue;
     border-radius: $border-radius;
-    color: $white;
-    display: inline-block;
-    font-family: $family-title-2;
-    padding: 16px 42px;
+    -webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+    @include retina {
+        padding: 2rem 5.6rem;
+        font-size: 2.2rem;
+    }
+    @include to-pad {
+        padding: 20px 56px;
+        font-size: $text-medium;
+    }
+}
+
+.btn:hover{
+    background: $dark-blue2;
 }
