--- a/styles/common/_titles.scss
+++ b/styles/common/_titles.scss
@@ -1,17 +1,30 @@
 .title-1 {
     font-family: $family-title-1;
-    font-size:  $text-giant;
+    font-size: $text-huge;
+    line-height: 140%;
     font-weight: 900;
     letter-spacing: 0.04em;
     text-transform: uppercase;
+    @include to-pad {
+        font-size: $text-giant;
+    }
+    @include retina {
+        font-size: 6.4rem;
+    }
 }
 
 .title-2 {
     font-family: $family-title-1;
-    font-size:  $text-large;
+    font-size: $text-large;
     font-weight: 900;
     letter-spacing: 0.04em;
     text-transform: uppercase;
+    @include desktop-large {
+        font-size: $text-huge;
+    }
+    @include retina {
+        font-size: 4.8rem;
+    }
 }
 
 .title-3 {
@@ -24,4 +37,19 @@
     font-family: $family-title-2;
     font-size: $text-medium-maxi;
     font-weight: 700;
+    @include retina {
+        font-size: 2.4rem;
+    }
+}
+
+@include desktop-large {
+    .section-text {
+        font-size: $text-medium-maxi;
+    }
+}
+
+@include retina {
+    .section-text {
+        font-size: 2.4rem;
+    }
 }
