--- a/styles/pages/home.css
+++ b/styles/pages/home.css
@@ -29,12 +29,11 @@
 }
 
 .first__img {
-  display: none;
   position: absolute;
   z-index: 1;
   top: 0;
   right: 0;
-  width: 900px;
+  width: 588px;
   height: auto;
 }
 @media (min-width: 1600px) {
@@ -44,7 +43,12 @@
 }
 @media (min-width: 1140px) {
   .first__img {
-    display: block;
+    width: 900px;
+  }
+}
+@media (min-width: 768px) {
+  .first__img {
+    width: 660px;
   }
 }
 
@@ -167,12 +171,17 @@
 }
 
 .first__badge-wr {
-  display: flex;
+  display: none;
   margin-top: 40px;
 }
 @media (min-width: 1600px) {
   .first__badge-wr {
     margin-top: auto;
+  }
+}
+@media (min-width: 1140px) {
+  .first__badge-wr {
+    display: flex;
   }
 }
 
@@ -202,22 +211,6 @@
   margin-left: 64px;
 }
 
-@media (min-width: 1921px) {
-  .first {
-    padding: 7.5rem 0 10rem;
-  }
-
-  .first__title {
-    margin-bottom: 2.6rem;
-    max-width: 72.5rem;
-  }
-
-  .first__text {
-    margin-bottom: 1rem;
-    max-width: 57rem;
-    font-size: 2.8rem;
-  }
-}
 .benefits {
   padding: 118px 0 62px;
   background: #E2E8F1;
@@ -295,46 +288,6 @@
   color: #E2E8F1;
 }
 
-@media (min-width: 1921px) {
-  .benefits {
-    padding: 11.8rem 0 6.2rem;
-  }
-
-  .benefits__list {
-    margin: 0 -2rem;
-  }
-
-  .benefits__item {
-    width: 53.3rem;
-    padding: 0 2rem;
-    margin: 0 0 4rem;
-  }
-
-  .benefits__item-wr {
-    min-height: 16.5rem;
-    border-radius: 0.8rem;
-  }
-
-  .benefits__item-left {
-    width: 11.2rem;
-  }
-
-  .benefits__item-center {
-    padding: 2.4rem 0;
-  }
-
-  .benefits__item-right {
-    position: relative;
-    width: 9.1rem;
-  }
-
-  .benefits__item-num {
-    position: absolute;
-    left: 0;
-    bottom: -0.1rem;
-    font-size: 14.4rem;
-  }
-}
 .about {
   padding: 50px 0;
 }
@@ -437,38 +390,6 @@
 
   .about__item-right {
     padding: 53px 25px 53px 53px;
-  }
-}
-@media (min-width: 1921px) {
-  .about {
-    padding: 5rem 0;
-  }
-
-  .title-line:after {
-    width: 11.4rem;
-    height: 0.1rem;
-    margin: 3rem 0 0;
-  }
-
-  .about__item + .about__item {
-    margin-top: 4rem;
-  }
-
-  .about__item:last-child .about__item-img {
-    margin-right: -1.6rem;
-  }
-
-  .about__item-right {
-    padding: 3rem;
-    border-radius: 0.8rem;
-  }
-
-  .about__item-left {
-    margin-right: 1rem;
-  }
-
-  .about__text {
-    margin-top: 2.2rem;
   }
 }
 
