--- a/styles/setup/_variables.scss
+++ b/styles/setup/_variables.scss
@@ -2,7 +2,6 @@
 $pad-width: 768px;
 $desktop-width: 1140px;
 $desktop-large-width: 1600px;
-$retina-width: 1921px;
 
 /* Sizes */
 $html-min-width: 500px;
@@ -25,6 +24,8 @@ $gray-blue: #E2E8F1;
 $light-gray-blue: #F1F5FB;
 $gray: #6c7177;
 $dark-gray: #5C5C5C;
+$clear: transparent;
+$light-white: rgba(255, 255, 255, 0.7);
 
 /* Font Family */
 $text-helper: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
@@ -37,6 +38,7 @@ $family-main: Arial, $text-helper;
 
 /* Font Size */
 $text-tiny: 14px;
+$text-medium-small: 16px;
 $text-small: 18px;
 $text-medium-mini: 20px;
 $text-medium: 22px;
