--- a/styles/common.css
+++ b/styles/common.css
@@ -32,29 +32,12 @@ html {
   line-height: 1.25;
   text-align: left;
   -webkit-text-size-adjust: 100%;
-}
-@media (min-width: 1921px) {
-  html {
-    max-width: none;
-    font-size: 0.520836vw;
-  }
+  -webkit-tap-highlight-color: transparent;
 }
 
-@media (min-width: 1921px) {
-  html {
-    max-width: none;
-    font-size: 0.520836vw;
-  }
-}
 body {
   height: 100%;
   margin: 0;
-}
-@media (min-width: 1921px) {
-  body {
-    max-width: none;
-    font-size: 24px;
-  }
 }
 
 p {
@@ -161,40 +144,63 @@ img {
     width: 1560px;
   }
 }
-@media (min-width: 1921px) {
-  .container {
-    width: 156rem;
-  }
-}
 
 .btn {
   display: inline-block;
-  padding: 14px 40px;
   font-family: "Gilroy", sans-serif;
-  font-size: 18px;
-  color: #fff;
-  background: #0276FF;
   border-radius: 8px;
+  border: 1px solid;
   -webkit-transition: all 0.3s ease;
   -moz-transition: all 0.3s ease;
   -o-transition: all 0.3s ease;
   transition: all 0.3s ease;
 }
-@media (min-width: 1921px) {
-  .btn {
-    padding: 2rem 5.6rem;
-    font-size: 2.2rem;
-  }
+
+.btn-blue {
+  padding: 12px 38px;
+  font-size: 18px;
+  color: #fff;
+  background: #0276FF;
+  border-color: #0276FF;
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease;
 }
 @media (min-width: 768px) {
-  .btn {
-    padding: 20px 56px;
+  .btn-blue {
+    padding: 18px 54px;
     font-size: 22px;
   }
 }
 
-.btn:hover {
+.btn-blue:hover {
   background: #102A83;
+  border-color: #102A83;
+}
+
+.btn-clear {
+  padding: 8px 14px;
+  font-size: 14px;
+  color: #fff;
+  background: transparent;
+  border-color: #fff;
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+@media (min-width: 1600px) {
+  .btn-clear {
+    padding: 10px 18px;
+    font-size: 20px;
+  }
+}
+
+.btn-clear:hover {
+  color: #2148D2;
+  background: rgba(255, 255, 255, 0.7);
+  border-color: #2148D2;
 }
 
 .title-1 {
@@ -210,11 +216,6 @@ img {
     font-size: 64px;
   }
 }
-@media (min-width: 1921px) {
-  .title-1 {
-    font-size: 6.4rem;
-  }
-}
 
 .title-2 {
   font-family: "Gilroy-Heavy", sans-serif;
@@ -226,11 +227,6 @@ img {
 @media (min-width: 1600px) {
   .title-2 {
     font-size: 48px;
-  }
-}
-@media (min-width: 1921px) {
-  .title-2 {
-    font-size: 4.8rem;
   }
 }
 
@@ -245,23 +241,14 @@ img {
   font-size: 24px;
   font-weight: 700;
 }
-@media (min-width: 1921px) {
-  .title-4 {
-    font-size: 2.4rem;
-  }
-}
 
 @media (min-width: 1600px) {
   .section-text {
     font-size: 24px;
   }
 }
-@media (min-width: 1921px) {
-  .section-text {
-    font-size: 2.4rem;
-  }
-}
 .link {
+  display: block;
   cursor: pointer;
   text-decoration: none;
   color: #2148D2;
@@ -437,9 +424,283 @@ img {
 }
 
 .header {
-  padding: 45px 0;
   background: #0B1C56;
   color: #fff;
+}
+@media (min-width: 1140px) {
+  .header {
+    padding: 24px 0 32px;
+  }
+}
+
+.header__container {
+  display: flex;
+  align-items: center;
+}
+
+.header__link-logo {
+  margin-right: 70px;
+}
+
+.header__link-logo img {
+  width: 100px;
+  max-width: none;
+}
+@media (min-width: 1140px) {
+  .header__link-logo img {
+    width: 170px;
+  }
+}
+
+.header__wr {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  flex: auto;
+}
+
+.header__item {
+  width: 100%;
+}
+
+.header__item-menu {
+  margin: 0;
+}
+@media (min-width: 1600px) {
+  .header__item-menu {
+    margin-top: 32px;
+  }
+}
+@media (min-width: 1140px) {
+  .header__item-menu {
+    margin-top: 22px;
+  }
+}
+
+.header__item-contacts {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+@media (min-width: 1140px) {
+  .header__item-contacts {
+    justify-content: space-between;
+  }
+}
+
+.header__contacts {
+  display: none;
+  align-items: center;
+  padding: 0;
+  border: none;
+}
+@media (min-width: 1140px) {
+  .header__contacts {
+    display: flex;
+  }
+}
+
+.header__contacts-item {
+  display: block;
+  position: relative;
+  padding: 0 34px 0 30px;
+  font-family: "Manrope", sans-serif;
+  font-size: 14px;
+  line-height: 140%;
+  color: #fff;
+  cursor: pointer;
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+.header__contacts-item + .header__contacts-item {
+  margin: 0 0 0 35px;
+}
+@media (min-width: 1600px) {
+  .header__contacts-item {
+    font-size: 20px;
+  }
+  .header__contacts-item + .header__contacts-item {
+    margin: 0 0 0 55px;
+  }
+}
+
+.header__contacts-item:hover {
+  color: #F4CC7E;
+}
+
+.header__contacts-mail:before,
+.header__contacts-place:before,
+.header__contacts-phone:before {
+  position: absolute;
+  content: "";
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.header__contacts-place:before {
+  width: 17px;
+  height: 20px;
+  background-image: url(/img/svg/icon-contact-place.svg);
+}
+
+.header__contacts-phone:before {
+  width: 20px;
+  height: 20px;
+  background-image: url(/img/svg/icon-contact-phone.svg);
+}
+
+.header__contacts-mail:before {
+  width: 20px;
+  height: 16px;
+  background-image: url(/img/svg/icon-contact-mail.svg);
+}
+
+.menu__list {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-top: 10px;
+}
+@media (min-width: 1140px) {
+  .menu__list {
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 0;
+  }
+}
+
+.menu__item {
+  padding: 10px 20px 10px 30px;
+  font-size: 24px;
+  font-family: "Manrope", sans-serif;
+  font-weight: 500;
+  line-height: 130%;
+  text-transform: uppercase;
+  color: #1B1E2C;
+  cursor: pointer;
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+@media (min-width: 1600px) {
+  .menu__item {
+    font-size: 20px;
+  }
+}
+@media (min-width: 1140px) {
+  .menu__item {
+    font-size: 16px;
+    padding: 0;
+    color: #fff;
+  }
+}
+
+.menu__item:hover {
+  color: #F4CC7E;
+}
+
+.menu__content {
+  position: fixed;
+  z-index: 100;
+  width: 500px;
+  padding: 0 0 80px 0;
+  top: 0;
+  right: -550px;
+  background: #fff;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
+  transition: right 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+}
+@media (min-width: 1140px) {
+  .menu__content {
+    position: static;
+    top: auto;
+    right: auto;
+    width: auto;
+    height: auto !important;
+    padding: 0;
+    background: 0;
+    box-shadow: none;
+  }
+}
+
+.menu__btn {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 70px;
+  height: 75px;
+  margin-left: 30px;
+  padding: 25px 17px;
+}
+@media (min-width: 1140px) {
+  .menu__btn {
+    display: none;
+  }
+}
+
+.menu__btn-line {
+  width: 100%;
+  height: 3px;
+  background: #fff;
+}
+
+.menu {
+  position: relative;
+  user-select: none;
+}
+
+.menu__closer {
+  width: 85px;
+  height: 85px;
+  margin-left: auto;
+  font-size: 85px;
+  color: #1B1E2C;
+  line-height: 1;
+  cursor: pointer;
+}
+@media (min-width: 1140px) {
+  .menu__closer {
+    display: none;
+  }
+}
+
+.menu__content-wr {
+  height: 100%;
+  overflow: auto;
+}
+@media (min-width: 1140px) {
+  .menu__content-wr {
+    height: auto;
+    overflow: initial;
+  }
+}
+
+.menu__contacts {
+  margin-top: 20px;
+  border-top: 1px solid #1B1E2C;
+  padding: 40px 20px 60px 30px;
+}
+@media (min-width: 1140px) {
+  .menu__contacts {
+    display: none;
+  }
+}
+
+.menu__contacts .header__contacts-item {
+  font-size: 20px;
+  color: #1B1E2C;
+}
+.menu__contacts .header__contacts-item + .header__contacts-item {
+  margin: 15px 0 0 0;
 }
 
 .footer {
